--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.7",
     "tslint": "^5.20.1",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongoose": "^8.8.4"
   }
 }
