--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "eslint . --fix",
-    "build": "tsc",
+    "build": "tsc && resolve-tspaths",
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
@@ -24,6 +24,7 @@
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "nodemon": "^3.1.7",
+    "resolve-tspaths": "^0.8.23",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.0"
   },
