--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && resolve-tspaths",
     "watch": "tsc -w",
     "prestart": "npm run build",
-    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
+    "start": "nodemon .",
+    "dev": "concurrently --kill-others \"npm run watch\" \"npm start .\""
   },
   "keywords": [],
   "author": "",
