--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "eslint . --fix",
-    "build": "tsc && resolve-tspaths",
+    "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "nodemon .",
@@ -25,7 +25,6 @@
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
     "nodemon": "^3.1.7",
-    "resolve-tspaths": "^0.8.23",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.0"
   },
