--- a/withStarter/package.json
+++ b/withStarter/package.json
@@ -38,16 +38,16 @@
     "nodemon",
     "supertest"
   ],
-  "author": "Wubshet Zeleke",
-  "license": "ISC",
+  "author": "Ayne Abreham",
+  "license": "MIT",
   "dependencies": {
-    "compression": "^1.7.4",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "helmet": "^7.1.0",
-    "mongoose": "^8.2.3",
-    "pino": "^8.19.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^7.2.0",
+    "mongoose": "^8.9.2",
+    "pino": "^8.21.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
