--- a/withStarter/package.json
+++ b/withStarter/package.json
@@ -6,7 +6,7 @@
   "main": "dist/server.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wubeZ/create-express-ts-starter.git"
+    "url": "https://github.com/aynuayex/vehicle-management-system/tree/main/backend"
   },
   "scripts": {
     "dev": "nodemon src/server.ts | npx pino-pretty",
@@ -45,32 +45,35 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "helmet": "^7.2.0",
+    "helmet": "^8.0.0",
     "mongoose": "^8.9.2",
-    "pino": "^8.21.0"
+    "pino": "^9.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.9",
     "onchange": "^7.1.0",
-    "pino-pretty": "^11.0.0",
-    "prettier": "^3.2.5",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
+    "pino-pretty": "^13.0.0",
+    "prettier": "^3.4.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1"
   }
 }
