--- a/withStarter/tsconfig.json
+++ b/withStarter/tsconfig.json
@@ -3,8 +3,11 @@
       "target": "ES6",
       "module": "commonjs",
       "outDir": "./dist",
+      "rootDir": "./src",
       "moduleResolution": "node",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true
   },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
